# plinux

./: README.md  gituse  my_bbb.sh
1-C-tools/: c4.c  cscript.sh  tar  testc
GTK/GTKAPPV1.0/src/: AddDetails.c  AddPopup.c  ConfigScreen.c  Makefile.am  SettingScreen.c~  main.c~
GTK/GTKAPPV1.0/src/Images/: Neha Biodata.doc
GTK/GTKAPPV1.0/src/dbms/GT-1/SBC-1/1FP-1/2sen1/: man.txt  name.txt
GTK/GTKAPPV1.0/src/dbms/GT-1/SBC-1/1FP-1/2sen6/: man.txt  name.txt
GTK/GTKAPPV1.0/src/dbms/Gt-6/5SBC-1/5TIM-1/5Sensor-1/: geo.txt  man.txt  name.txt
GTK/GTKAPPV1.0/src/dbms/Gt-6/5SBC-2/TIM-1/Sen-1/: name.txt
GTK/GTKAPPV1.0/src/dbms/Gt-7/SBC-1/TIM-1/ACC-1/: geo.txt  man.txt  name.txt
GTK/GTKAPPV1.0/src/include/: main.h
GTK/GTKAPPV1.0/src/ui/: Bp.ui  addconf.ui  conf.ui  delconf.ui  pop.ui
GTK/non GTKAPPV1.0/: .anjuta_sym_db.db  Makefile.am  Makefile.in  configure  configure.ac  del.sh
GTK/non GTKAPPV1.0/.anjuta/session/: anjuta.session  dock-layout.xml
GTK/non GTKAPPV1.0/Debug/: config.h  config.status  libtool
GTK/non GTKAPPV1.0/Debug/po/: Makefile.in
GTK/non GTKAPPV1.0/Debug/src/.deps/: AddDetails.Po  ConfigScreen.Po  Popup.Po
GTK/non GTKAPPV1.0/autom4te.cache/: output.0  traces.0
GTK/non GTKAPPV1.0/src/: AddConfigScreen.c  AddConfigScreen.c~  AddDetails.c~  ConfigScreen.c~  DelConfigScreen.c  DelConfigScreen.c~  DelPopup.c  DelPopup.c~  MainScreen.c  MainScreen.c~  Makefile.in  SettingScreen.c  main.c
GTK/non GTKAPPV1.0/src/dbms/GT-1/SBC-1/1FP-1/2sen1/: geo.txt
GTK/non GTKAPPV1.0/src/ui/: adddet.ui  delpop.ui  main (copy).ui  main.ui  set.ui
(+1194 files in other folders)
